# health_rules_engine

./: .gitignore  AptFile  Aptfile  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  docker-compose.yml  mutation_draft.graphql  mutation_vec.graphql
migrations/2021-09-11-192223_add_base_models/: down.sql  up.sql
src/: common_utils.rs  config_variables.rs  database.rs  graphql.rs  kafka.rs  lib.rs  main.rs  schema.rs
src/errors/: mod.rs
src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs  utilities.rs
src/handlers/: api.rs  base.rs  endpoints.rs  mod.rs  routes.rs
src/models/: access_log.rs  api_models.rs  auth.rs  country.rs  covid_test.rs  health_profile.rs  messages.rs  mod.rs  person.rs  place.rs  postal_address.rs  quarantine_plan.rs  travel_group.rs  trip.rs  user.rs  vaccination.rs  vaccine.rs  voyage.rs
templates/: api_base.html  base.html  index.html
