[package]
name = "health_rules_engine"
version = "0.1.0"
authors = ["christopherallison <cgeist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.1.1"
actix-multipart = "0.2.0"
actix-service = "1.0.6"

chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono", "uuid"]}
r2d2 = "0.8.8"
diesel-derive-enum = { version = "1", features = ["postgres"]}
diesel_migrations = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"]}
lazy_static = "1.4"

dotenv = "0.15.0"
futures = "0.3.5"

serde = "1.0.130"
serde_derive = "1.0"
derive_more = "0.99.5"
serde_json = "1.0"

alcoholic_jwt = "1.0.0"
reqwest = { version = "0.10.6", features = ["json"] }
env_logger = "0.7.1"
bdays = "0.1.1"
csv = "1.1.3"
bytes = "0.5.4"

juniper = "0.15.7"
graphql_client = "0.9.0"
dataloader = "0.14"
async-trait = "0.1"

tera = "1.3.0"
tera-text-filters = "1.0"

Inflector = "0.5.1"
calamine = "0.16.1"