[package]
name = "health_rules_engine"
version = "0.1.0"
authors = ["christopherallison <cgeist7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.11"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "2.4.0"
actix-multipart = "0.2.0"
actix-service = "1.0.6"

async-graphql = { version = "3.0.6", features = ["uuid", "chrono", "chrono-tz"] }
async-graphql-actix-web = "3.0.6"

argon2rs = "0.2"
argonautica = "0.2.0"
jsonwebtoken = "7.2.0"
strum = "0.21.0"
strum_macros = "0.21.1"

chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono", "uuid", "serde_json"]}
r2d2 = "0.8.8"
diesel-derive-enum = { version = "1", features = ["postgres"]}
diesel_migrations = "1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
lazy_static = "1.4"

dotenv = "0.15.0"
futures = "0.3.17"
rdkafka = { version = "0.25.0", features = ["cmake-build"]}
async-stream = "0.3.2"

serde = "1.0.130"
serde_derive = "1.0"
derive_more = "0.99.5"
serde_json = "1.0"
shrinkwraprs = "0.3.0"

rand = "0.8.4"

alcoholic_jwt = "1.0.0"
reqwest = { version = "0.10.6", features = ["json"] }
env_logger = "0.7.1"
bdays = "0.1.1"
csv = "1.1.3"
bytes = "0.5.4"

#juniper = { version = "0.15.7", features = ["uuid"]}
graphql_client = "0.9.0"
dataloader = "0.14"
async-trait = "0.1"

tera = "1.3.0"
tera-text-filters = "1.0"

Inflector = "0.5.1"
calamine = "0.16.1"